added the missing example.html file that can be loaded in the TextEditor

--- a/learn_qml/TextEditor/resources.qrc
+++ b/learn_qml/TextEditor/resources.qrc
@@ -21,6 +21,7 @@
         <file>qml/images/textunder.png</file>
         <file>qml/images/zoomin.png</file>
         <file>qml/images/zoomout.png</file>
+		<file>example.html</file>
         <file>qml/images/qt-logo.png</file>
     </qresource>
 </RCC>
