--- a/learn_qml/controls/basics1/qml.qrc
+++ b/learn_qml/controls/basics1/qml.qrc
@@ -25,5 +25,7 @@
         <file>RepeaterTest1.qml</file>
         <file>Dummy.qml</file>
         <file>CustomizeSlider_copy.qml</file>
+        <file>TestCombo.qml</file>
+        <file>TestMouseArea.qml</file>
     </qresource>
 </RCC>
