--- a/learn_qml/controls/basics1/qml.qrc
+++ b/learn_qml/controls/basics1/qml.qrc
@@ -27,5 +27,7 @@
         <file>CustomizeSlider_copy.qml</file>
         <file>TestCombo.qml</file>
         <file>TestMouseArea.qml</file>
+        <file>TestDisplay.qml</file>
+        <file>DisplayComponent.qml</file>
     </qresource>
 </RCC>
